--- a/p3-mysql.yml
+++ b/p3-mysql.yml
@@ -73,3 +73,8 @@
         backup: yes
       notify:
         - Restart mysql
+  handlers:
+    - name: Restart mysql
+      service:
+        name: mysql
+        state: restarted
