--- a/p8-adminer.yml
+++ b/p8-adminer.yml
@@ -47,3 +47,8 @@
       service:
         name: nginx
         state: restarted   
+
+    - name: Reload php8.1-fpm
+      service:
+        name: php8.1-fpm
+        state: restarted
