--- a/p8-adminer.yml
+++ b/p8-adminer.yml
@@ -43,7 +43,22 @@
         path: /var/www/html/adminer/index.php
         mode: 0755
 
-    - name: Reload nginx
+#*******************************************************
+    - name: Copy nginx config file
+      copy:
+        src: files/default3.conf
+        dest: /etc/nginx/sites-available/default
+        owner: root
+        group: root
+        mode: 0777
+  
+    - name: Copy config www.conf
+      copy:
+        src: files/www.conf
+        dest: /etc/php/8.1/fpm/pool.d/www.conf
+#*******************************************************
+
+    - name: Restart nginx
       service:
         name: nginx
         state: restarted   
