--- a/files/default3.conf
+++ b/files/default3.conf
@@ -8,20 +8,17 @@ index index.php;
           try_files $uri $uri/ =404;
        }
 
+     location /adminer {
+       include snippets/fastcgi-php.conf;            
+       fastcgi_pass  127.0.0.1:9081;
+        }
+
+
      location ~* \.php$ {
        include snippets/fastcgi-php.conf;            
        fastcgi_pass unix:/var/run/php/php8.1-fpm-tru.sock;
         }
      
-     location /adminer {
-        alias /etc;
-        autoindex off;
-        include fastcgi_params;
-        fastcgi_pass  127.0.0.1:9081;
-        fastcgi_intercept_errors on;
-        fastcgi_index conf.php;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-}
 
 
    	location ~ /\.ht {
