--- a/files/default3.conf
+++ b/files/default3.conf
@@ -8,7 +8,7 @@ index index.php;
           try_files $uri $uri/ =404;
        }
 
-     location /adminer {
+     location /adminer ~* \.php$ {
        include snippets/fastcgi-php.conf;            
        fastcgi_pass  127.0.0.1:9081;
         }
