--- a/files/default3.conf
+++ b/files/default3.conf
@@ -8,16 +8,16 @@ index index.php;
           try_files $uri $uri/ =404;
        }
 
-     location /adminer ~* \.php$ {
+     location ~* \.php$ {
        include snippets/fastcgi-php.conf;            
        fastcgi_pass  127.0.0.1:9081;
         }
 
 
-     location ~* \.php$ {
-       include snippets/fastcgi-php.conf;            
-       fastcgi_pass unix:/var/run/php/php8.1-fpm-tru.sock;
-        }
+#     location ~* \.php$ {
+#       include snippets/fastcgi-php.conf;            
+#       fastcgi_pass unix:/var/run/php/php8.1-fpm-tru.sock;
+#        }
      
 
 
