--- a/p8-adminer.yml
+++ b/p8-adminer.yml
@@ -22,8 +22,8 @@
 
     - name: download  
       get_url:
-        url: https://github.com/vrana/adminer/releases/download/v4.7.3/adminer-4.7.3-mysql.php
-        dest: /var/www/html/adminer/
+        url: https://www.adminer.org/latest-mysql.php
+        dest: /var/www/html/adminer/adminer.php
         mode: 0755
 
 
