--- a/files/default3.conf
+++ b/files/default3.conf
@@ -11,7 +11,7 @@ index index.php adminer.php;
      location ~ .php$ {
                 try_files $uri =404;
                 fastcgi_pass 127.0.0.1:9081;
-                fastcgi_index index.php adminer.php;
+                fastcgi_index adminer.php;
                 fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
                 include fastcgi_params;
         }
