--- a/files/default3.conf
+++ b/files/default3.conf
@@ -2,7 +2,7 @@ server {
 listen 80; 
 # server_name    truruki.ru;        
 root  /var/www/html; 
-index index.php adminer.php;
+index index.php;
       
      location / {
           try_files $uri $uri/ =404;
@@ -11,7 +11,7 @@ index index.php adminer.php;
      location ~ .php$ {
                 try_files $uri =404;
                 fastcgi_pass 127.0.0.1:9081;
-                fastcgi_index adminer.php;
+                fastcgi_index index.php;
                 fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
                 include fastcgi_params;
         }
